--- a/package.json
+++ b/package.json
@@ -2,19 +2,38 @@
   "name": "cricket-game",
   "version": "1.0.0",
   "description": "Cricket Game using HTML5 Canvas",
+  "main": "game.js",
+  "type": "module",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/yourusername/cricket-game"
+  },
+  "license": "MIT",
   "scripts": {
+    "clean": "rimraf node_modules dist",
     "start": "lite-server",
     "build": "webpack --mode production",
-    "test": "jest",
-    "docs": "jsdoc -c jsdoc.json",
-    "lint": "eslint ."
+    "dev": "webpack serve --mode development",
+    "test": "jest"
+  },
+  "dependencies": {
+    "core-js": "^3.30.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.22.5",
+    "@babel/preset-env": "^7.22.5",
+    "ajv": "^8.12.0",
+    "babel-loader": "^9.1.2",
+    "copy-webpack-plugin": "^11.0.0",
+    "html-webpack-plugin": "^5.5.3",
     "lite-server": "^2.6.1",
+    "rimraf": "^5.0.0",
+    "terser-webpack-plugin": "^5.3.9",
     "webpack": "^5.88.0",
     "webpack-cli": "^5.1.4",
-    "jest": "^29.6.0",
-    "jsdoc": "^4.0.2",
-    "eslint": "^8.44.0"
+    "webpack-dev-server": "^4.15.1"
+  },
+  "engines": {
+    "node": ">=14.0.0"
   }
 }
